--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "led.run",
+  "name": "led.run — Display Toolkit",
   "short_name": "led.run",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
-  "description": "Turn your device into a digital sign.",
+  "description": "Text signs, light effects, and sound visualizers. Turn any screen into a display.",
   "icons": [
     {
       "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23000'/><text x='50%' y='50%' font-family='sans-serif' font-weight='bold' font-size='100' fill='%2300e676' text-anchor='middle' dy='.3em'>LED</text></svg>",
