--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
-  "description": "Text signs, light effects, sound visualizers, and clock displays. Turn any screen into a display.",
+  "description": "Text signs, light effects, sound visualizers, clock displays, QR codes, and camera filters. Turn any screen into a display.",
   "icons": [
     {
       "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect width='512' height='512' fill='%23000'/><text x='50%' y='50%' font-family='sans-serif' font-weight='bold' font-size='100' fill='%2300e676' text-anchor='middle' dy='.3em'>LED</text></svg>",
